# rostering

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: publish_testpypi.yml  tests.yml
src/: README.md  example.py  example_staff.json
src/rostering/: __init__.py  build.py  config.py  data.py  extract.py  input_data.py  main.py  model.py  output.py  precheck.py  progress.py  reporting.py  result_types.py  solver.py  staff.py
src/rostering/generate/: make_staff.py  staff.py  staff_names.py
src/rostering/reporting/: README.md  __init__.py  adapters.py  data_models.py  metrics.py  model_stats.py  plots.py  reporter.py  text_report.py
src/rostering/rules/: README.md  availability.py  band_shortfall.py  base.py  consecutive_days.py  coverage.py  coverage_minima.py  decision_variables.py  fairness.py  helpers.py  interval_link.py  max_consecutive_days.py  min_length_shift.py  objective.py  registry.py  rest.py  run_penalty.py  shift_interval.py  weekly_cap.py
tests/: conftest.py  test_pass.py  test_readme.py
tests/rostering/: test_progress.py  test_solver.py  test_staff.py
tests/rostering/generate/: test_make_staff.py  test_staff.py
tests/rostering/reporting/: test_adapters.py  test_metrics.py  test_plots.py  test_reporter.py  test_text_report.py
tests/rostering/rules/: test_band_shortfall.py  test_consecutive_days.py  test_fairness.py  test_registry.py
tests/test_rostering/: test_progress.py
