[tool.poetry]
name = "rostering"
version = "1.1.0"
description = "Optimise colleague shift assignments based on employee holidays/preferences and business needs."
authors = ["tom-weisner <tomweisner@hotmail.com>"]
readme = "README.md"
packages = [{ include = "rostering", from = "src" }]

license = "MIT"
homepage = "https://github.com/TomWeisner/rostering.git"
documentation = "https://github.com/TomWeisner/rostering#readme"
keywords = ["rostering", "scheduling", "optimisation", "penalties"]

include = [
  "README.md",
  "LICENSE",
]
# Keep junk out of the wheel/sdist
exclude = [
  "tests/**",
  ".github/**",
  "noxfile.py",
  ".pre-commit-config.yaml"
]


[tool.poetry.dependencies]
python = ">=3.11,<4.0"
numpy = "^2.3.3"
ortools = "^9.14.6206"
pandas = "^2.3.3"
matplotlib = "^3.10.7"

[tool.poetry.group.dev.dependencies]
nox = "^2025.5.1"
nox-poetry = "^1.2.0"
mypy = "^1.18.2"
pre-commit = "^4.3.0"
pytest-cov = "^7.0.0"
pandas-stubs = ">=2.2,<3.0"


[tool.poetry.group.tests.dependencies]
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
# Tell mypy where your code lives (src/ layout) + which folders to check
files = ["src", "tests"]
python_version = "3.11"
mypy_path = ["src"]  # ensures imports like `import rostering` resolve from src/

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
# optional, but helpful:
src_paths = ["src", "tests"]
known_first_party = ["rostering"]
